src/test/01-Basic/114.txt
114.ck:2:6: error: cannot '=>' from/to a multi-variable declaration
[2] 5 => int x, y;
         ^
